# sql-ide

./: .gitignore  BI_IMPLEMENTATION.md  CASE.md  PLAN.md  README.md  docker-compose.yml  zip_context_ignore.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/evals/: README.md  chat_text_to_sql_demo_suite.json  chat_text_to_sql_suite.json  drivee_accuracy_and_flexibility_suite.json  drivee_complex_suite.json  drivee_complex_suite_20260402.json  drivee_db_tests.json  drivee_join_easy_suite_20260425.json  drivee_join_metrics_regression_20260425.json  dvdrental_complex_suite.json  evals_edge_cases.json  evals_multi_turn.json  evals_single_shot.json  runner.py  sakila_complex_suite.json
backend/scripts/: eval_chat_text_to_sql.py  rebuild_semantic_catalog.py
backend/sql_ide_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/test/: first.json  test_ai_chart_suggestion_service.py  test_chart_data_adapter.py  test_chart_decision_service.py  test_chat_service.py  test_chat_text_to_sql_eval.py  test_clarification_agent.py  test_clarification_policy.py  test_dashboard_services.py  test_database_metadata_refactor.py  test_dataset_execution.py  test_drivee_db_suite.py  test_example_service.py  test_intent_agent_accuracy.py  test_intent_followup.py  test_intent_time_range_clarification.py  test_llm_query_plan_normalization.py  test_llm_service.py  test_schema_truth_guard.py  test_semantic_catalog_schema.py  test_semantic_catalog_service.py  test_semantic_rule_engine.py  test_semantic_seed_notes.py  (+1 more)
(+317 files in other folders)
