[project]
name = "sql-ide-backend"
version = "0.1.0"
description = "Notebook-first analytics backend for NL-to-SQL workflows."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "sqlglot>=25.0.0,<26.0.0",
  "httpx>=0.27.0,<1.0.0",
  "openai>=1.75.0,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
